Modular Arabic support and Support for sci-units

--- a/rtl_test/equations.html
+++ b/rtl_test/equations.html
@@ -1,6 +1,9 @@
 <table border="1" cellpadding="8">
     <tr>
         <th>
+            #ID Name
+        </th>
+        <th>
             Equation
         </th>
         <th>
@@ -12,6 +15,9 @@
     </tr>
     <tr>
         <td>
+            <strong>Test Equation</strong>
+        </td>
+        <td>
             Enter your equation here:
             <input id="dynamic-equation"
                    value="x = 10" type="text" />
@@ -22,19 +28,25 @@
         <td id="dynamic-ar"></td>
     </tr>
     {{#equations}}
-    <tr>
+    <tr id="eq_{{_index}}">
         <td>
-            <code>{{.}}</code>
+            <a href="#eq_{{_index}}">
+                <strong>{{id}}</strong>
+            </a>
+        </td>
+        <td>
+            <code>{{equation}}</code>
         </td>
         <td>
             <script type="math/tex; mode=display">
-                {{.}}
+                {{equation}}
             </script>
         </td>
         <td>
             <script type="math/tex; mode=display">
-                \ar
-                {{.}}
+                \ar{
+                    {{equation}}
+                }
             </script>
         </td>
     </tr>
