Support for all (known) Arabic sci-units

--- a/rtl_test/equations.html
+++ b/rtl_test/equations.html
@@ -31,7 +31,7 @@
     <tr id="eq_{{_index}}">
         <td>
             <a href="#eq_{{_index}}">
-                <strong>{{id}}</strong>
+                <strong>#{{_index}} {{id}}</strong>
             </a>
         </td>
         <td>
