Removed HTML-related details from the TeX jax

--- a/rtl_test/index.html
+++ b/rtl_test/index.html
@@ -82,6 +82,8 @@
                 'Electrons': '2 \\elctrn',
                 'Time': '1\\year = 365.25\\day, 1\\day = 24\\hour',
                 'Max Watt': '\\Watt_\\max',
+                'Fill Factor': '\\FF',
+                'Photovoltaic Energy': '\\P_\\inn',
             }, 'id', 'equation');
 
             $.get('equations.html', function(template) {
