Handle double flipping

--- a/rtl_test/equations.html
+++ b/rtl_test/equations.html
@@ -28,10 +28,10 @@
         <td id="dynamic-ar"></td>
     </tr>
     {{#equations}}
-    <tr id="eq_{{_index}}">
+    <tr id="eq_{{id}}">
         <td>
-            <a href="#eq_{{_index}}">
-                <strong>#{{_index}} {{id}}</strong>
+            <a href="#eq_{{id}}">
+                <strong>#{{id}} {{name}}</strong>
             </a>
         </td>
         <td>
