--- a/rtl_test/index.html
+++ b/rtl_test/index.html
@@ -10,7 +10,8 @@
     <script type="text/javascript" src="//media.readthedocs.org/javascript/jquery/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/2.1.3/mustache.js"></script>
 
-    <script type="text/javascript" src="../unpacked/MathJax.js?config=TeX-MML-AM_HTMLorMML-full&amp;delayStartupUntil=configured">
+    <script type="text/javascript" src="rtl_config.js"></script>
+    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/2.5-latest/MathJax.js?config=TeX-MML-AM_HTMLorMML-full&amp;delayStartupUntil=configured">
     </script>
 
     <script type="text/javascript">
@@ -20,8 +21,6 @@
             }
         });
     </script>
-
-    <script type="text/javascript" src="rtl_config.js"></script>
 
     <script type="text/javascript">
         jQuery(function($) {
